WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146513
Check shouldOpenExternalURLs instead of isProcessingUserGesture before passing URL to LaunchServices
https://bugs.webkit.org/show_bug.cgi?id=146513
Summary
Check shouldOpenExternalURLs instead of isProcessingUserGesture before passin...
Brady Eidson
Reported
2015-07-01 08:58:17 PDT
Check shouldOpenExternalURLs instead of isProcessingUserGesture before passing URL to LaunchServices In radar as
rdar://problem/20577859
Attachments
Patch v1
(1.90 KB, patch)
2015-07-01 09:00 PDT
,
Brady Eidson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-07-01 08:59:04 PDT
This fixes cases where the URL undergoes 1 or more redirects, during which we lose the original value of isProcessingUserGesture
Brady Eidson
Comment 2
2015-07-01 09:00:44 PDT
Created
attachment 255923
[details]
Patch v1
Darin Adler
Comment 3
2015-07-01 09:36:38 PDT
Comment on
attachment 255923
[details]
Patch v1 Does shouldOpenExternalURLs include consideration of user gesture or is it a completely orthogonal concept?
Brady Eidson
Comment 4
2015-07-01 09:52:58 PDT
(In reply to
comment #3
)
> Comment on
attachment 255923
[details]
> Patch v1 > > Does shouldOpenExternalURLs include consideration of user gesture or is it a > completely orthogonal concept?
It considers user gestures.
Brady Eidson
Comment 5
2015-07-01 09:54:35 PDT
https://trac.webkit.org/changeset/186178
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug