Check shouldOpenExternalURLs instead of isProcessingUserGesture before passing URL to LaunchServices. <rdar://problem/20577859> and https://bugs.webkit.org/show_bug.cgi?id=146513

Reviewed by Darin Adler.

* UIProcess/Cocoa/NavigationState.mm:
(WebKit::tryAppLink): The expected value of isProcessingUserGesture is lost over redirects.
  shouldOpenExternalURLs actually fits this role perfectly.

Canonical link: https://commits.webkit.org/164597@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186178 268f45cc-cd09-0410-ab3c-d52691b4dbfc